--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             top: 50%;
             left: 50%;
             margin-top: -75px;
-            margin-left: -80px;
+            margin-left: -160px;
 
         }
 
@@ -105,7 +105,7 @@
 
 <body>
     <div id="child">
-        <h4>💗我永远为果果宝贝着迷</h4>
+        <h4>我永远为果果宝贝着迷💗</h4>
     </div>
     <!--这里写名字❤！！！-->
     <canvas id="pinkboard"></canvas>
